--- a/V2/workflows/main.yml
+++ b/V2/workflows/main.yml
@@ -14,5 +14,5 @@ jobs:
       uses: peaceiris/actions-gh-pages@v2
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./ 
+        publish_dir: ./V2 
         destination_dir: ./${{ github.event.release.tag_name }} 
